--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/bookmarks:client0.9.0
 
       - name: Push to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/bookmarks:c0.9.0
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/bookmarks:client0.9.0
